<resources>
    <string name="app_name">Pesa Tally</string>
    <string name="home">Home</string>

    <!--    GOALS   -->
    <string name="goals">Goals</string>
    <string name="daily_savings">Daily Savings</string>
    <string name="custom_goals">Custom Goals</string>
    <string name="goal_add_success">Goal added successfully</string>
    <string name="goal_not_saved">Goal not added!</string>
    <string name="add_goal">Add Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="goal_name">Goal Name</string>
    <string name="target_amount">Target Amount</string>
    <string name="deadline">Deadline</string>
    <string name="save_goal">Save Goal</string>
    <string name="goal_details">Goal Details</string>
    <string name="progress">Progress</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="confirm_delete_goal">Are you sure you want to delete this goal?</string>
    <string name="goal_description">Goal Description</string>
    <string name="deadline_not_set">Not Set</string>
    <string name="target">Target</string>
    <string name="saved">Saved</string>
    <string name="remaining">Remaining</string>

    <!--    TRANSACTIONS    -->
    <string name="transactions">Transactions</string>
    <string name="add_contribution">Add Contribution</string>
    <string name="amount">Amount</string>
    <string name="save_contribution">Save Contribution</string>
    <string name="contribution_add_success">Contribution added successfully</string>
    <string name="contribution_not_saved">Contribution not added!</string>
    <string name="date">Date</string>
    <string name="no_transactions">No transactions yet</string>

    <!--    SETTINGS    -->
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notification_summary">Receive daily and monthly reminders</string>

    <!--    BIOMETRICS    -->
    <string name="biometrics_authentication">Biometric Authentication</string>
    <string name="biometrics_sub_title">Authenticate using biometrics</string>

    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete!</string>
</resources>